removed administrative metadata, fixed p unwrap in transcriptions, enabled auto-check of preferred and authorised checkboxes if none is selected

--- a/assets/js/ckeditor/contents.css
+++ b/assets/js/ckeditor/contents.css
@@ -100,10 +100,6 @@ body
 	margin-right: 3px; 
 }
 
-.tei-unclear {
-	font-style: italic;
-}
-
 .tei-unclear:after {
 	content:']';
 	font-weight: bold;
